--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -1,78 +1,85 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>cloudsim-plus-package</artifactId>
-    <groupId>org.cloudsimplus</groupId>
-    <version>1.0</version>
-  </parent>
-  <artifactId>distribution</artifactId>
-  <packaging>pom</packaging>
-  <name>distribution</name>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>cloudsim-plus-package</artifactId>
+        <groupId>org.cloudsimplus</groupId>
+        <version>1.0</version>
+    </parent>
+    <artifactId>distribution</artifactId>
+    <packaging>pom</packaging>
+    <name>CloudSim++ Distribution Package</name>
+    <description>
+        A package for distribution purpuse that contains:
+        - CloudSim++ API that you can use to build your cloud simulation scenarios;
+        - Documentation in javadoc format;
+        - Several examples of how to build cloud simulations;
+        - Source code.
+    </description>
 
-  <build>
-    <finalName>cloudsim-plus-${project.version}</finalName>
-  	<plugins>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-assembly-plugin</artifactId>
-                        <version>2.6</version>
-			<executions>
-				<execution>
-					<phase>install</phase>
-					<goals>
-						<goal>single</goal>
-					</goals>
-				</execution>
-			</executions>
-			<configuration>
-				<descriptors>
-					<descriptor>src/main/assembly/package.xml</descriptor>
-				</descriptors>
-				<appendAssemblyId>false</appendAssemblyId>
-			</configuration>
-		</plugin>
-  	</plugins>
-  </build>
+    <build>
+        <finalName>cloudsim-plus-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assembly/package.xml</descriptor>
+                    </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-plus</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-plus</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-		<classifier>sources</classifier>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-plus</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-		<classifier>javadoc</classifier>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-plus-examples</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>cloudsim-plus-examples</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-		<classifier>sources</classifier>
-  	</dependency>
-  	<dependency>
-  		<groupId>${project.groupId}</groupId>
-		<artifactId>documentation</artifactId>
-		<version>${project.version}</version>
-		<type>jar</type>
-  	</dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cloudsim-plus</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cloudsim-plus</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+            <classifier>sources</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cloudsim-plus</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+            <classifier>javadoc</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cloudsim-plus-examples</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cloudsim-plus-examples</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+            <classifier>sources</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>documentation</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
