--- a/modules/cloudsim-plus/pom.xml
+++ b/modules/cloudsim-plus/pom.xml
@@ -13,15 +13,8 @@
     <url>http://cloudsimplus.org</url>
 
     <organization>
-        <name>Multimedia Signal Processing (MSP), Instituto de Telecomunicações (IT), Universidade da Beira Interior (UBI)</name>
-        <url>https://www.it.pt/MSP-Cv</url>
-        <city>Covilhã, Castelo Branco, Portugal</city>
-    </organization>
-
-    <organization>
-        <name>Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
-        <url>https://www.ifto.edu.br</url>
-        <city>Palmas, Tocantins, Brazil</city>
+        <name>Multimedia Signal Processing (MSP), Instituto de Telecomunicações (IT), Universidade da Beira Interior (UBI), Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</name>
+        <url>http://www.it.pt/MSP-Cv http://www.it.pt http://www.ubi.pt http://www.ifto.edu.br</url>
     </organization>
 
     <licenses>
@@ -31,13 +24,13 @@
         </license>
     </licenses>
 
-   <developers>
-      <developer>
-        <name>Manoel Campos da Silva Filho</name>
-        <email>manoelcampos@gmail.com</email>
-        <organization>Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</organization>
-        <organizationUrl>http://www.ifto.edu.br</organizationUrl>
-      </developer>
+    <developers>
+        <developer>
+            <name>Manoel Campos da Silva Filho</name>
+            <email>manoelcampos@gmail.com</email>
+            <organization>Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</organization>
+            <organizationUrl>http://www.ifto.edu.br</organizationUrl>
+        </developer>
     </developers>
 
     <scm>
