Refactored network.datacenter examples: the network communication has to be checked (see that the simulation results always show 0 communication)
- removed unused variables and fields
- extracted methods to split reponsibilities and make code clear
- renamed methods to more meaningful names
- created new fields and constants to make the code more parameterized
- allowed the creation of several AppCloudlets, showing results individually for each one

--- a/cloudsim-plus-examples/pom.xml
+++ b/cloudsim-plus-examples/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0</version>
     </parent>
     <artifactId>cloudsim-plus-examples</artifactId>
-    <name>CloudSim++ Examples</name>
+    <name>CloudSim Plus Examples</name>
     <description>
         Ready-to-run examples of how to use CloudSim++ API.
         Each Java class with a main method is a different example.
