--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ language: java
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl cloudsim-plus,cloudsim-plus-examples
 script: mvn clean package -pl cloudsim-plus,cloudsim-plus-examples
 after_success:
-  #https://github.com/trautonen/coveralls-maven-plugin
-  - mvn clean test jacoco:report coveralls:report
+  - mvn clean test jacoco:report
 jdk:
   - oraclejdk8 
 
