--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,8 @@ charset = utf-8
 end_of_line = lf
 
 [*.{java,xml}]
-indent_style = space
-indent_size = 4
+indent_style = tab
+indent_size = 1
 insert_final_newline = true
 trim_trailing_whitespace = true
 
