--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 /cloudsim-plus/target/
 /cloudsim-plus-examples/target/
+/cloudsim-plus-benchmarks/target/
 /cloudsim-plus/nbproject/
 /distribution/target/
 /target/
