--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -52,14 +52,15 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>${jmh.version}</version>
+            <version>1.14</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>${jmh.version}</version>
+            <version>1.14</version>
             <scope>provided</scope>
         </dependency>
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>cloudsim-plus</artifactId>
@@ -71,11 +72,6 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--
-            JMH version to use with this project.
-          -->
-        <jmh.version>1.13</jmh.version>
-
-        <!--
             Java source/target to use for compilation.
           -->
         <javac.target>1.8</javac.target>
@@ -83,7 +79,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <!--
             Name of the benchmark Uber-JAR to generate.
           -->
-        <uberjar.name>${project.build.finalName}-benchmarks</uberjar.name>
+        <uberjar.name>${project.build.finalName}-uber</uberjar.name>
     </properties>
 
     <build>
