- Inclusion of new module "cloudsim-plus-testbeds" to provide a set of more complex and comprehensive testbeds used to assess implementation of algorithms for different purposes such as mapping of Cloudlets to VMs, allocation and scheduling policies,# Please enter the commit message for your changes. resource utilization models or VM placement and migration policies.
- Inclusion of the ExperimentRunnerAbstract class to provide a base implementation
  for experiment runners.
- Implementation of the "Batch Means Method" to reduce simulation results correlation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /cloudsim-plus/target/
 /cloudsim-plus-examples/target/
 /cloudsim-plus-benchmarks/target/
+/cloudsim-plus-testbeds/target/
 /cloudsim-plus/nbproject/
 /distribution/target/
 /target/
