--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
     <modules>
         <module>cloudsim-plus</module>
         <module>cloudsim-plus-examples</module>
-								<module>cloudsim-plus-benchmarks</module>
+		<module>cloudsim-plus-benchmarks</module>
+		<module>cloudsim-plus-testbeds</module>
         <module>distribution</module>
     </modules>
 
