--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: java
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -pl cloudsim-plus,cloudsim-plus-examples
 script: mvn clean package -pl cloudsim-plus,cloudsim-plus-examples
 after_success:
-  - mvn clean test jacoco:report
+  - mvn clean test -Dintegration_tests=true jacoco:report
 jdk:
   - oraclejdk8 
 
