--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ test:
     - curl http://www.jpm4j.org/install/script -k > jpmInstall.sh
     - sudo sh jpmInstall.sh
     - sudo jpm install com.codacy:codacy-coverage-reporter:assembly
+    #Upload the coverage report to codacy.com. It requires the CODACY_PROJECT_TOKEN environment variable
     - codacy-coverage-reporter -l Java -r cloudsim-plus/target/site/jacoco/jacoco.xml
