--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -44,6 +44,15 @@ THE POSSIBILITY OF SUCH DAMAGE.
     <description>A module containing benchmarks created using JMH (Java Microbenchmark Harness framework) to assess CloudSim Plus performance</description>
     <url>http://cloudsimplus.org</url>
 
+    <inceptionYear>2016</inceptionYear>
+
+    <licenses>
+        <license>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
+        </license>
+    </licenses>
+
     <prerequisites>
         <maven>3.0</maven>
     </prerequisites>
@@ -80,6 +89,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
             Name of the benchmark Uber-JAR to generate.
           -->
         <uberjar.name>${project.build.finalName}-uber</uberjar.name>
+
+        <!-- Directory where is the license file to be used by the com.mycila.maven-license-plugin -->
+        <license.dir>${project.parent.basedir}</license.dir>
     </properties>
 
     <build>
