--- a/cloudsim-plus/pom.xml
+++ b/cloudsim-plus/pom.xml
@@ -16,12 +16,19 @@
         <url>http://www.it.pt/MSP-Cv http://www.it.pt http://www.ubi.pt http://www.ifto.edu.br</url>
     </organization>
 
+    <inceptionYear>2015</inceptionYear>
+
     <licenses>
         <license>
             <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
             <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
         </license>
     </licenses>
+
+    <properties>
+        <!-- Directory where is the license file to be used by the com.mycila.maven-license-plugin -->
+        <license.dir>${project.parent.basedir}</license.dir>
+    </properties>
 
     <developers>
         <developer>
