Updated com.mycila.maven-license-plugin to include license header for all sub-modules.

--- a/cloudsim-plus-benchmarks/pom.xml
+++ b/cloudsim-plus-benchmarks/pom.xml
@@ -146,6 +146,15 @@ THE POSSIBILITY OF SUCH DAMAGE.
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Inherited from the parent pom. See the plugin there for more details. -->
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <header>${license.dir}/license-header.txt</header>
+                </configuration>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
