--- a/cloudsim-plus-examples/pom.xml
+++ b/cloudsim-plus-examples/pom.xml
@@ -98,6 +98,15 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Inherited from the parent pom. See the plugin there for more details. -->
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <header>${license.dir}/license-header.txt</header>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
