--- a/cloudsim-plus-testbeds/pom.xml
+++ b/cloudsim-plus-testbeds/pom.xml
@@ -72,6 +72,15 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
+            <!-- Inherited from the parent pom. See the plugin there for more details. -->
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <header>${license.dir}/license-header.txt</header>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
