--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -52,6 +52,15 @@
                     <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
             </plugin>
+
+            <!-- Inherited from the parent pom. See the plugin there for more details. -->
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <header>${license.dir}/license-header.txt</header>
+                </configuration>
+            </plugin>
 		</plugins>
     </build>
 
